// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buffers made with protobufjs > Test message 1`] = `
{
  "f1": [
    {
      "data": [
        1,
        2,
        3,
        4,
        5,
      ],
      "type": "Buffer",
    },
  ],
  "f2": [
    1,
  ],
  "f3": [
    {
      "f13": [
        101,
      ],
    },
  ],
  "f4": [
    {
      "f1": [
        1,
      ],
      "f2": [
        {},
      ],
      "f3": [
        {
          "f1": [
            1,
          ],
        },
      ],
    },
    {
      "f1": [
        2,
      ],
      "f2": [
        "awesome",
      ],
      "f3": [
        {
          "f1": [
            2,
          ],
        },
      ],
    },
    {
      "f1": [
        3,
      ],
      "f2": [
        "neat",
      ],
      "f3": [
        {
          "f1": [
            3,
          ],
        },
      ],
    },
  ],
}
`;

exports[`documented hand-parsing > message from article 1`] = `
{
  "f1": [
    {
      "f6": [
        {
          "f1": [
            7,
          ],
          "f2": [
            0,
          ],
          "f3": [
            26,
          ],
          "f4": [
            0,
          ],
        },
      ],
    },
    {
      "f4": [
        {
          "f1": [
            2,
          ],
          "f2": [
            25,
          ],
          "f3": [
            3,
          ],
        },
      ],
    },
    {
      "f4": [
        {
          "data": [
            8,
            2,
            16,
            162,
            3,
            24,
            32,
          ],
          "type": "Buffer",
        },
      ],
    },
    {
      "f4": [
        {
          "data": [
            8,
            2,
            16,
            141,
            2,
          ],
          "type": "Buffer",
        },
      ],
    },
  ],
}
`;
